--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ ext {
     targetSdkVersion = 28
     minSdkVersion = 17
 
-    supportVersion = '1.0.0-beta01'
+    supportVersion = '1.1.0'
     bottomSheetVersion = '0.9.2'
 }
 
