--- a/build.gradle
+++ b/build.gradle
@@ -3,35 +3,31 @@
 buildscript {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.1'
+        classpath 'com.android.tools.build:gradle:7.4.1'
 //        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
-plugins {
-    id "com.jfrog.bintray" version "1.7.3"
-}
-
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
 ext {
-    compileSdkVersion = 28
-    targetSdkVersion = 28
-    minSdkVersion = 17
+    compileSdkVersion = 33
+    targetSdkVersion = 33
+    minSdkVersion = 21
 
-    supportVersion = '1.1.0'
+    supportVersion = '1.6.1'
+    materialVersion = '1.8.0'
     bottomSheetVersion = '0.9.2'
 }
 
